fix(RadioSimple): revert hover colors in high-contrast

--- a/src/components/RadioSimple/RadioSimple.style.scss
+++ b/src/components/RadioSimple/RadioSimple.style.scss
@@ -11,11 +11,6 @@
 
   &:hover {
     background-color: var(--mds-color-theme-background-primary-hover);
-
-    @media (forced-colors: active) {
-      background-color: SelectedItem;
-      color: SelectedItemText;
-    }
   }
 
   &:active {
